# tiny-c-compiler

./: README.md  dummy.example  main.gv  parser.debug  pyproject.toml  test.out
tests/: test_code.py
tests/in-out/: t28.in  t29.in  t30.in  t31.in  t32.in
uc/: uc_ast.py  uc_block.py  uc_code.py  uc_compiler.py  uc_interpreter.py  uc_lexer.py  uc_parser.py  uc_sema.py  uc_type.py
